# cookiecutter-python

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  cookiecutter.json  devbox.json  poetry.toml  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  sample_prog.json
.devcontainer/: devcontainer.json  post_create.sh  post_start.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: issue.yml
.github/workflows/: build_n_test.yaml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_python_project.py
{{cookiecutter.project_slug}}/: .dockerignore  .env  .flake8  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  MANIFEST.in  README.md  alembic.ini  database.py  devbox.json  entrypoint.sh  env_example  flags.json  git_ignore  helper.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  security.py  settings.py
{{cookiecutter.project_slug}}/.claude/: settings.json
{{cookiecutter.project_slug}}/.devcontainer/: post_create.sh  post_start.sh
{{cookiecutter.project_slug}}/.github/workflows/: build.yaml  build_n_push.yaml  python_build.yaml
{{cookiecutter.project_slug}}/migrations/: env.py
{{cookiecutter.project_slug}}/migrations/versions/: b7dc215c6433_create_tables.py
{{cookiecutter.project_slug}}/tests/: conftest.py  jwt_utils.py  test_helper.py  test_models.py  test_server.py  test_{{ cookiecutter.pkg_name }}.py
{{cookiecutter.project_slug}}/tests/mockdata/flagd/: flags.flagd.json
{{cookiecutter.project_slug}}/tests/mockdata/jwt/: jwks.json  private_key.pem
{{cookiecutter.project_slug}}/tests/mockdata/openfeature/: flags.flagd.json
{{cookiecutter.project_slug}}/{{ cookiecutter.pkg_name }}/: __init__.py  api.py  models.py
