[tool.poetry]
name = "cookiecutter-python"
version = "0.2.0"
description = "Cookiecutter template for generic Python 3 project with tooling configuration for testing, linting and IDE support"
authors = ["Li Lin <guru.lin@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cookies = "^0.7.0"
pre-commit = "3.7.1"
ruff = "^0.4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests"
]

# see ruff configuration options at
# https://docs.astral.sh/ruff/configuration/

[tool.ruff]
line-length = 120
indent-width = 4
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "devbox.lock",
    "*{cookiecutter.project_slug}*",
]

[tool.ruff.lint]
select = ["E", "F", "W", "C", "I", "A"]  # Enable checks for PEP8, imports, and other standard rules
ignore = ["E203", "E266"]
