[project]
name = "vino-cookiecutter-python"
version = "0.3.4"
description = "Copier template for generic Python 3 project with tooling configuration for testing, linting and IDE support"
authors = [{ name = "Li Lin", email = "guru.lin@gmail.com" }]
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
    "cookiecutter>=2.6.0",
    "python-dotenv >= 1.0.1",
]


[dependency-groups]
dev = [
    "pytest >= 8.3.0",
    "pytest-dotenv >= 0.5.2",
    "pytest-mock >= 3.14",
    "pre-commit >= 4.0.1",
    "ruff >= 0.11.8",
    "pyright >= 1.1.400",
    "pytest-cookies>=0.7.0",
]

[tool.uv]
managed = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
]
env_files = [".env"]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
]

# see ruff configuration options at
# https://docs.astral.sh/ruff/configuration/

[tool.ruff]
line-length = 90
indent-width = 4
exclude = [".git", "__pycache__", "venv", ".venv", "\\{\\{*\\}\\}"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "C",
    "I",
    "A",
] # Enable checks for PEP8, imports, and other standard rules
ignore = ["E203", "E266"]
