[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "Cookiecutter template for generic Python 3 project with tooling configuration for testing, linting and IDE support"
authors = [{ name = "Li Lin", email = "guru.lin@gmail.com" }]
readme = "README.md"

requires-python = ">= 3.12"
dependencies = [
{%- if "none" in cookiecutter.extra_packages %}
    "python-dotenv >= 1.0.1",
{%- endif %}
{%- if "fastapi" in cookiecutter.extra_packages %}
    "fastapi[standard]>=0.115.12",
    "ulid-py>=1.1.0",
    "python-jose[cryptography]>=3.4.0",
    "pydantic-settings>=2.9.1",
{%- endif %}
{%- if "sqlmodel" in cookiecutter.extra_packages %}
    "sqlmodel>=0.0.24",
    "alembic >= 1.15.2",
{%- endif %}
]

{%- if cookiecutter.project_type == "lib" %}
[tool.setuptools]
packages = ["{{ cookiecutter.pkg_name }}"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
{%- endif %}


[dependency-groups]
dev = [
    "pytest >= 8.3.0",
    "pytest-dotenv >= 0.5.2",
    "pytest-mock >= 3.14",
    "pytest-cov >= 6.1",
    "pytest-asyncio>=0.25.3",
    "pre-commit >= 4.0.1",
    "ruff >= 0.11.8",
    "pyright >= 1.1.400",
{%- if "sqlmodel" in cookiecutter.extra_packages %}
    "sqlalchemy-utils>=0.41.2",
{%- endif %}
]

[tool.uv]
managed = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
]
env_files = [".env"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
]

# see ruff configuration options at
# https://docs.astral.sh/ruff/configuration/

[tool.ruff]
line-length = 90
indent-width = 4
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
{%- if "alembic" in cookiecutter.extra_packages %}
    "migrations",
{%- endif %}
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "C",
    "I",
    "A",
] # Enable checks for PEP8, imports, and other standard rules
ignore = ["E203", "E266"]
